--- a/README
+++ b/README
@@ -1,10 +1,48 @@
 NAME
 
-    Crypt::Passphrase::Argon2::AES - INSERT YOUR ABSTRACT HERE
+    Crypt::Passphrase::Argon2::AES - A peppered AES-encrypted Argon2
+    encoder for Crypt::Passphrase
+
+SYNOPSIS
+
+     my $passphrase = Crypt::Passphrase->new(
+         encoder => {
+             module  => 'Argon2::AES',
+             peppers => {
+                 1 => pack('H*', '0123456789ABCDEF...'),
+                 2 => pack('H*', 'FEDCBA9876543210...'),
+             },
+         },
+     );
 
 DESCRIPTION
 
-    Write a full description of the module and its features here.
+    This class implements peppering by encrypting the hash using AES
+    (unlike Crypt::Passphrase::Pepper::Simple which hashes the input
+    instead).
+
+METHODS
+
+ new
+
+    This constructor takes all arguments also taken by
+    Crypt::Passphrase::Argon2, with the following additions:
+
+      * peppers
+
+      This is a map of identifier to pepper value. The identifiers should
+      be (probably small) numbers, the values should be random binary
+      strings that must be either 16, 24 or 32 bytes long.
+
+      * active
+
+      This is the key of the active pepper. By default it will be the key
+      with the highest (numerical) value.
+
+      * mode
+
+      This is the mode that will be used with AES. Values values are 'ecb',
+      'cbc' (the default), 'cfb', 'ofb' and 'ctr'.
 
 AUTHOR
 
