Explicitly require Crypt::Rijndael 1.16

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Crypt-Passphrase-Argon2-AES
 
+          - Explicitly require Crypt::Rijndael 1.16
+
 0.001     2023-04-07 16:19:25+0200
           - Initial release to an unsuspecting world
 
