--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Crypt-Passphrase-Argon2-AES
 
+          - Make cipher part of peppered crypt identifiers
+
 0.002     2023-04-11 14:21:32+0200
           - Explicitly require Crypt::Rijndael 1.16
 
