--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Crypt-Passphrase-Argon2-AES
 
+          - Fix typo in repository metadata
+
 0.004     2023-05-05 02:22:23+0200
           - Adapt tests to latest Crypt::Passphrase::Argon2::Encrypted
 
