--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Crypt-Passphrase-Argon2-AES
 
+          - Add a length check for the peppers
+
 0.005     2023-09-25 21:32:50+0200
           - Fix typo in repository metadata
 
