Add support for aes-cbc-pad and aes-ecb-pad

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Crypt-Passphrase-Argon2-AES
 
+          - Add support for aes-cbc-pad and aes-ecb-pad
+
 0.007     2024-02-09 00:36:33+0100
           - Test recode_hash behavior
           - Double check more arguments
